<resources>
    <string name="app_name">noteapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Пропустить</string>
    <string name="start_work">Начать работу</string>
    <string name="note">Заметки</string>
    <string name="todo">TODO</string>
    <string name="title_text">Нужно сделать:</string>
    <string name="finish">Готово</string>
    <string name="hint_detail">Добавьте вашу заметку</string>
    <string name="add_description">Добавьте название</string>
    <string name="registration_text">Регистрация по номеру</string>
    <string name="code">Получить код</string>
    <string name="phone">+996 707 777 777</string>
    <string name="get_code">Ваш код</string>
</resources>